# encarcado

./: .dockerignore  .env  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
bb/: README.md  auth.py  database.py  dependencies.py  main.py  models.py  repositories.py  requirements.txt  seed_simples.py
leileiamor/: main.py  pyproject.toml  requirements.txt  teste.py
leileiamor/app/core/: __init__.py  database.py  security.py
leileiamor/app/database/: bd2.sql
leileiamor/app/models/: __init__.py
leileiamor/app/routers/: __init__.py
leileiamor/app/schemas/: __init__.py  schemas.py
templates/: index.html
